ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
12/25/2015 Oleh Derevenko
        * Unexpected joint mode assignment (instead of comparison) fixed within
          an dUASSERT in dJointSetTransmissionAxis2() of transmission joint

11/28/2015 Oleh Derevenko
        * Convex-Trimesh collider added (libccd+GIMPACT only)(by Piotr Piastucki)
        * dCreateConvex() and dGeomSetConvex() public APIs changed to expect 
          their parameter arrays as const pointers

11/01/2015 Oleh Derevenko
        * OPCODE mesh colliders' input coordinates have been offset to  
          mesh-relative frames to decrease potential computational errors
          (suggested by luckytrashsc2@g***l.com)

08/05/2015 Oleh Derevenko
        * Implemented change to return highest depth contacts subset for GIMPACT 
          in cases if contacts count exceeds requested maximum (as suggested in 
          the issue #36 by Piotr Piastucki)

11/17/2014 Daniel K. O.
        * Added support for using libccd from the system (if found via
          pkg-config)

11/10/2014 Oleh Derevenko
        * Floating point division by zero in capsule-ray collision routine 
          in case if the ray axis was parallel the cylinder and the ray started
          from within it fixed (issue #26)

11/08/2014 Oleh Derevenko
        * Threading support has been extended to complete implementation 
          of QuickStep

10/29/2014 Daniel K. O.
        * Added dJointSetDBallDistance

10/19/2014 Oleh Derevenko
        * Built-in threading implementation compilation fixed for OSX
          (clock_gettime() is missing from the system - reported by Bram)

08/10/2014 Oleh Derevenko