@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+01/03/2016 Oleh Derevenko
+        * An invalid memory access fixed in dxSAPSpace::BoxPruning() in case
+          if there were NaN values in AABBs to be sorted.
+
 12/25/2015 Oleh Derevenko
         * Unexpected joint mode assignment (instead of comparison) fixed within
           an dUASSERT in dJointSetTransmissionAxis2() of transmission joint
